/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package model.spia;

/**
 *
 * @author user
 */
public class RipristinaIpotesiPrecedente implements StrumentoDiManipolazione {
  @Override
  public void elabora(Sessione s) {
    new GUI.spia.RipristinaIpotesiPrecedenteGUI( s ).setVisible(true);
  }
  
}
