/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package model.spia;

import model.Messaggio;

/**
 *
 * @author user
 */
public interface StrumentoDiManipolazione {
  public void elabora( Sessione s );
}
