/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

package model.spia.supportTools;

import model.spia.*;
import model.Messaggio;

/**
 *
 * @author user
 */
public class AnalisiFrequenze implements SistemaDiSupporto {

    @Override
    public Ipotesi start(Ipotesi ipCorrente, Messaggio messaggio) {
        throw new UnsupportedOperationException("Not supported yet."); //To change body of generated methods, choose Tools | Templates.
    }
    
}
